--- a/files/style.css
+++ b/files/style.css
@@ -1,10 +1,215 @@
+body, html{
+    box-sizing: border-box;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    overflow: hidden;
+}
 .dashboard-container{
     display: grid;
-    grid-template-
-}
-.dashboard-container > div {
-    border: 1px solid green;
+    height: 100vh;
+    width: 100%; 
+    margin: 0;
+    grid-template-areas: 
+    "sidebar header"
+    "sidebar main";
+    grid-template-columns: 0.8fr 4fr;
+    grid-template-rows: 1fr 4fr; 
+    background-color: antiquewhite;
+    position: absolute;
 }
 .header-grid-item{
-    color: blue;
+    grid-area: header;
+    color: rgb(21, 21, 36);
+    background-color: rgba(252, 28, 177, 0.4);
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+   padding: 10px;
+   margin: 0;
+   position: relative;
+   width: 100%;
+}
+input[type=search]{
+    width: 50%;
+    padding: 3px;
+    border-radius: 6px;
+    border: 1px solid rgb(156, 43, 1);
+}
+.search-input-wrapper{
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+}
+.search-input-wrapper i{
+     padding: 5px;
+    vertical-align: middle;
+}
+.username-greeting{
+    position: absolute;
+    bottom: 10px;
+    left: 150px;
+    width: 100%;
+    font-size: 15px;
+    font-weight: 800;
+}
+.username{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 0;
+    font-family: matemasie;
+    font-weight: 400;
+    font-size: 18px;
+    position:absolute;
+    top: 0;
+    right: 200px;
+    width: 200px;
+}
+.nav-list-grid{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 200px;
+    padding: 10px;
+    margin: 0;
+}
+.nav-list-grid ul {
+     display: flex;
+    flex-direction: row;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 10px; 
+    width: 30px;
+}
+.nav-list-grid li{
+    background: rgba(181, 5, 197, 0.4) ;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15px;
+    width: 30px;
+    padding: 10px;
+    border: 1px solid white;
+    font-size: 13px; 
+
+}
+.sidebar-grid-item{
+    grid-area:sidebar;
+     background-color: rgba(59, 2, 65, 0.6);
+    box-shadow: 0px 10px 5px rgba(0,0,0,0.2);
+    font-size: 15px;
+    padding: 5px; 
+    color: antiquewhite;
+   
+}
+.body-grid-item{
+    grid-area: main;
+    display: grid;
+    grid-template-areas: 
+    "projects announcements"
+    "projects trending";
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap:10px;
+    column-gap: 0;
+}
+h1{
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    padding: 5px;
+
+}
+h2{
+     font-size: 17px;
+    margin: 0;
+    padding: 0; 
+    font-family: "Workbench";
+    font-weight: 400;
+    font-style: normal;
+}
+.sidebar-top{
+    margin: 0 auto;
+    display: block;
+}
+.sidebar-bottom{
+    margin-top: 50px;
+}
+.navigation{
+    display: block;
+    margin: 0;
+}
+.navigation i{
+    padding: 5px;
+    vertical-align: middle;
+}
+.project-wrapper{
+     grid-area: projects;
+     margin: 0;
+     width: 100%;
+     padding-bottom: 30px;
+}
+.announcements-wrapper{
+     grid-area: announcements;
+     padding: 15px 30px 0px 0px;
+}
+.trending-wrapper{
+    grid-area: trending;
+     padding: 15px 30px 0px 0px;
+}
+.projects-wrapper h2{
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-left: 20px;
+}
+.projects{
+     display: grid;
+    width:65%;
+    height: 90px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns:repeat(2,1fr) ;
+    font-size: 11px;
+    gap: 20px;
+    align-items: center;
+    margin: 0 auto 30px;
+}
+.main-card{
+    background: rgba(252, 172, 216, 0.2);
+    border-radius: 6px;
+    padding: 10px; 
+    border-left: 6px solid palevioletred;
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.2); 
+}
+.announcements{
+    padding: 10px;
+    background-color: rgba(252, 172, 216, 0.2);
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
+     padding: 20px;
+     font-size: 10px;
+    border-radius: 10px;
+}
+.announcements div p{
+    border-bottom: 1px solid rgb(189, 172, 172);
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+.announcements div p:last-child{
+    border-bottom: none;
+    margin: 0;
+    padding-bottom: 0;
+}
+.trending{
+ padding: 10px;
+  background-color: rgba(252, 172, 216, 0.2);
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
+ padding: 10px;
+ list-style: none;
+ border-radius: 10px;
+}
+.trending ul, li{
+    list-style: none;
+    padding: 5px;
 }
